fixing alignment for skills container for smaller devices

--- a/style/about.css
+++ b/style/about.css
@@ -70,6 +70,8 @@ body {
 @media screen and (max-width: 480px) {
     .skills_tab {
         top: 370px;
+        width: 20%;
+        height: 30px;
     }
 }
 @media screen and (min-width: 481px) {
@@ -130,6 +132,7 @@ body {
     .skills_container {
         margin-top: 170px;
         height: auto;
+        width: 80%;
     }
 }
 @media screen and (min-width: 481px) {
